<resources>
    <string name="app_name">Shopping List</string>
    <string name="sort">sort</string>
    <string name="add">add</string>
    <string name="productname">productName</string>
    <string name="productnote">productNote</string>
    <string name="product_image">product image</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_this_item">Do you want to delete this item?</string>
    <string name="name">Name:</string>
    <string name="note">Note:</string>
    <string name="save">save</string>
    <string name="products">Products:</string>
</resources>